[gd_scene load_steps=5 format=3 uid="uid://d34qkdqjj20np"]

[ext_resource type="PackedScene" uid="uid://dio2qg504o01r" path="res://Demos/Space_shooter/Scenes/Ship/space_ship.tscn" id="1_cr1fi"]
[ext_resource type="Script" uid="uid://bgivang07e37r" path="res://Demos/Space_shooter/space_shooter_demo.gd" id="1_evj4n"]
[ext_resource type="Script" uid="uid://cwgeclmj7sw2d" path="res://Demos/Space_shooter/top_down_view.gd" id="1_mjbpw"]

[sub_resource type="Environment" id="Environment_mjbpw"]
background_mode = 1

[node name="Space_Shooter_Demo" type="Node3D"]
script = ExtResource("1_evj4n")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mjbpw")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 9, 0)
light_energy = 2.5
light_indirect_energy = 0.0
sky_mode = 1

[node name="ingame_UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InGameTimer" type="HBoxContainer" parent="ingame_UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_right = 25.0
offset_bottom = 55.0
grow_horizontal = 2

[node name="Mintues" type="Label" parent="ingame_UI/InGameTimer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0823529, 0.380392, 1, 1)
theme_override_font_sizes/font_size = 40
text = "0 : "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seconds" type="Label" parent="ingame_UI/InGameTimer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0823529, 0.380392, 1, 1)
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="ingame_UI"]
autostart = true

[node name="top_down_view" type="Node3D" parent="."]
script = ExtResource("1_mjbpw")

[node name="Space_ship" parent="top_down_view" instance=ExtResource("1_cr1fi")]

[node name="Camera_Target" type="Node3D" parent="top_down_view/Space_ship"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 25, 0)

[node name="Camera_control" type="Node3D" parent="top_down_view/Space_ship"]
top_level = true

[node name="Camera3D" type="Camera3D" parent="top_down_view/Space_ship/Camera_control"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 28.0496, -0.436523)

[node name="Enemy_Spawn_POS" type="Marker3D" parent="top_down_view/Space_ship"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.419226, 0, -1.08484)

[node name="Enemies" type="Node3D" parent="."]

[node name="Timer" type="Timer" parent="Enemies"]
wait_time = 6.0
one_shot = true

[connection signal="timeout" from="ingame_UI/Timer" to="." method="_on_timer_timeout"]
